--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,10 @@
+<h1>Hello, Rails!</h1>
+  <%= link_to "My Blog", posts_path %>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Posts</h1>
+
 
 <table>
   <thead>
